--- a/dominio.html
+++ b/dominio.html
@@ -43,7 +43,7 @@
       <a href="/locawebstyle/documentacao/exemplos//pre-painel"  class="ls-go-next"><span class="ls-text">Voltar à lista de serviços</span></a>
 
       <h1 class="ls-brand-name">
-        <a href="home" class="ls-ico-earth">
+        <a href="index.html" class="ls-ico-earth">
           <small>Painel Exchage</small>
         </a>
       </h1>
@@ -57,7 +57,7 @@
 
         <nav class="ls-menu">
           <ul>
-            <li><a href="/home/rafaela/code/html_loca/index.html" class="ls-ico-dashboard" title="Dashboard">Dominios</a></li>
+            <li><a href="index.html" class="ls-ico-dashboard" title="Dashboard">Dominios</a></li>
             <li>
               <a href="#" class="ls-ico-cog" title="Configurações">Configurações</a>
               <ul>
@@ -124,11 +124,11 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td><a href="/home/rafaela/code/html_loca/group.html">Devs</a></td>
+                    <td><a href="group.html">Devs</a></td>
                     <td>dev@magrathealabs.com</td>
                   </tr>
                   <tr>
-                    <td><a href="/home/rafaela/code/html_loca/group.html">Comercial</a></td>
+                    <td><a href="group.html">Comercial</a></td>
                     <td>comerical@magrathealabs.com</td>
                   </tr>
                 </tbody>
