--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <nav class="ls-menu">
           <ul>
-            <li><a href="/home/rafaela/code/html_loca/index.html" class="ls-ico-dashboard" title="Dashboard">Dominios</a></li>
+            <li><a href="index.html" class="ls-ico-dashboard" title="Dashboard">Dominios</a></li>
             <li>
               <a href="#" class="ls-ico-cog" title="Configurações">Configurações</a>
               <ul>
@@ -78,7 +78,7 @@
           <header class="ls-list-header">
             <div class="ls-list-title col-md-12">
               <a href="#" >magrathealabs.com</a>
-              <p class="ls-float-right ls-float-none-xs ls-small-info"><a href="/home/rafaela/code/html_loca/dominio.html" class="ls-ico-cog"></a></p>
+              <p class="ls-float-right ls-float-none-xs ls-small-info"><a href="dominio.html" class="ls-ico-cog"></a></p>
             </div>
           </header>
 
@@ -110,7 +110,7 @@
           <header class="ls-list-header">
             <div class="ls-list-title col-md-12">
               <a href="#" >daleponto.com.br</a>
-              <p class="ls-float-right ls-float-none-xs ls-small-info"><a href="/home/rafaela/code/html_loca/dominio.html" class="ls-ico-cog"></a></p>
+              <p class="ls-float-right ls-float-none-xs ls-small-info"><a href="dominio.html" class="ls-ico-cog"></a></p>
             </div>
           </header>
           <table class="ls-table">
