--- a/group.html
+++ b/group.html
@@ -57,7 +57,7 @@
 
         <nav class="ls-menu">
           <ul>
-            <li><a href="/home/rafaela/code/html_loca/index.html" class="ls-ico-dashboard" title="Dashboard">Dominios</a></li>
+            <li><a href="index.html" class="ls-ico-dashboard" title="Dashboard">Dominios</a></li>
             <li>
               <a href="#" class="ls-ico-cog" title="Configurações">Configurações</a>
               <ul>
