Add domain link in config profile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <nav class="ls-dropdown-nav ls-user-menu">
             <ul>
               <li><a href="#">Meus dados</a></li>
-              <li><a href="#">Dominios</a></li>
+              <li><a href="dominio.html">Dominios</a></li>
               <li><a href="#">Sair</a></li>
             </ul>
           </nav>
